--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,9 @@
 .btn-project {
   @apply inline-flex px-6 py-2 text-lg text-white dark:text-white bg-indigo-500 border-0 rounded focus:outline-none hover:bg-indigo-600;
 }
+.btn-work {
+  @apply inline-flex px-6 py-2 text-lg text-white dark:text-white bg-red-400 border-0 rounded focus:outline-none hover:bg-red-500;
+}
 .project-card {
   @apply flex flex-col w-full m-3 rounded-xl 
   transition duration-300 transform border border-gray-300
