--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,7 +42,7 @@ a {
 }
 
 a {
-  @apply dark:text-slate-400 dark:hover:text-slate-50;
+  @apply dark:text-slate-400 dark:hover:text-sky-700;
 }
 
 p {
