--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,12 +22,14 @@
 }
 
 h1,
-h2,
 h3,
 h4,
 h5,
 h6 {
-  @apply text-slate-900 dark:text-white;
+  @apply text-slate-900 dark:text-slate-300;
+}
+h2 {
+  @apply text-2xl font-bold text-slate-800 dark:text-emerald-400;
 }
 
 footer {
